infrastructure/envoy-gateway/templates/policies/gateway-traffic.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: kstacks-gateway-traffic
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kstacks-gateway
# Response compression
  compressor:
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
    - type: Zstd
      zstd: {}
# Rate limting
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: Distinct
          limit:
            requests: 600
            unit: Minute
          shared: true
