infrastructure/envoy-gateway/templates/policies/jwt-auth.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-auth
  namespace: default
spec:
  mergeType: StrategicMerge
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: groups-route
  jwt:
    providers:
      - name: auth-service-provider
        remoteJWKS:
          uri: "http://auth-service.default.svc.cluster.local/auth/.well-known/jwks.json"
        extractFrom:
          headers:
            - name: Authorization
              valuePrefix: "Bearer "
          cookies:
            - access_token
        claimToHeaders:
          - claim: sub
            header: X-User-Id
          - claim: name
            header: X-User-Name
          - claim: email
            header: X-User-Email
          - claim: gender
            header: X-User-Gender
